<?xml version="1.0"?>
<package format="3">
  <name>message_tf_frame_transformer</name>
  <version>1.1.2</version>
  <description>Transforms messages of arbitrary type to a different frame using tf2::doTransform</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>perception_msgs_utils</depend>
  <depend>rclcpp</depend>
  <depend>route_planning_msgs</depend>
  <depend>route_planning_msgs_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_perception_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_route_planning_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_trajectory_planning_msgs</depend>
  <depend>trajectory_planning_msgs</depend>
  <depend>trajectory_planning_msgs_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
